# language_test

./: .clang-format  .gitignore  CMakeLists.txt  clock_gettime_test.cpp  get_vdso_file.cpp  move_test.cpp  run_test.sh  test_my_gettimeofday.cpp  test_time_cache.cc  vsyscall_test.cpp
backup/: test_time_cache copy 2.back  test_time_cache copy.cc_2022-03-23-all_night_run
bk/: CMakeLists.txt
cpp/: .gitignore  CMakeLists.txt  run_test.sh
cpp/backup/: test_time_cache copy.cc_use_cas  test_time_cache copy.ccback
cpp/base/: big_small_endian.cpp  dynamic_cast.cpp  dynamic_cast2.cpp  pragma_pack.cpp  semaphore_use.cpp  struct_offset.cpp  test_size_of_bool.cpp  unique_ptr.cpp  weak_ptr_impl.cpp
cpp/core_debug/: core_get_add_info.cpp
cpp/cpp_language/: bad_stack_core.cpp  coustm_hash.cpp  custom_hash_func.cpp  decltypre.cpp  enable_shared_from_this.cpp  init_test.cpp  list_use_demo.cpp  my_semaphore_impl.cpp  return_func_test.cpp  scope_guard_test.cpp  std_forward.cpp  std_forward2.cpp  std_move_study_test.cpp  switch_case.cpp
cpp/cpp_language/my_reactor/: my_reactor_c.cpp  my_reactor_main.cpp  my_reactor_server.cpp
cpp/cpp_language/old/: log.txt  time_thread.h
cpp/cpp_language/old/mult_thread/: producer_consumer_1.cpp  producer_consumer_2.cpp
cpp/cpu/: sched_setaffinity.cpp
cpp/cpu/backup/: test_time_cache.cc_cas_2
cpp/design_pattern/: Chain_of_Responsibility copy.cpp  Chain_of_Responsibility.cpp  observer.cpp
cpp/evpp/: CMakeLists.txt  connector.cc  dns_resolver.h  fd_channel.h  inner_pre.h  invoke_timer.h  ip_address.cc  ip_address.h  libevent.h  listener.cc  listener.h  socket_address.h  tcp_client.h  tcp_conn.cc  tcp_server.h  windows_port.h
cpp/evpp/evpphttp/: service.h
cpp/evpp/http/: context.h  http_server.h
cpp/evpp/httpc/: request.h  response.h  url_parser.h
cpp/evpp/udp/: UdpEventLoopThreadPool.h  sync_udp_client.h  udp_server.cc  udp_server.h
cpp/gettimeofday/: rwlock_time_cache.cpp
cpp/linux/: LRU.cpp
cpp/mult_thread/: producer_consumer_1.cpp
cpp/old/: time_benchmark.cpp
cpp/old/gettimeofday/: test_vdso_gettimeofday.cpp
cpp/old/mult_thread/: producer_consumer_1.cpp  producer_consumer_2.cpp
cpp/race/: Trie.cpp  race_template.cpp  union_find.cpp
cpp/sort/: a.out  insertSort.cpp  quick_sort.cpp
cpp/stl/: my_string.cpp  my_string.hpp  safe_queue_2.cpp  set_callback_func.cpp  size_of.cpp
cpp/string/: string_view_test.cpp
cpp/temp/: temp1.cpp
cpp/temp_interview/: interview_1.cpp
cpp/tree/: tree_travel.cpp
cpp/txt/: test_time_cache copy.txt  test_time_cache.txt
cpp_language/: j++_test.cpp  sprintf_test.cpp
evpp/: buffer.h  connector.h  duration.h  event_loop.h  event_loop_thread.h  event_loop_thread_pool.h  event_watcher.h  logging.h  socket_address.cc  sockets.cc  sockets.h  tcp_client.cc  tcp_conn.h
evpp/http/: service.h
evpp/httpc/: conn.h  conn_pool.h
evpp/udp/: UdpEventLoopThreadPool.cc  sync_udp_client.cc  udp_message.h
gettimeofday/: atomic_time_cache.cpp  cas_time_cache.cpp  rwlock_time_cache.cpp  test.cpp  test_my_gettimeofday.cpp  test_vdso_gettimeofday.cpp
old/: 2022-6-interview.cpp  asm_vsyscall_test.cpp  test_dns.cpp  time_thread.cpp
py/: send_http_ifc_test.py  udp_send_test_publish.py  udp_send_test_start_task.py  udp_send_test_subscribe.py
shell/: cd_dir_and_do_dcpdump.sh
sql/: distributed_method_lock.sql
